# PngForge-web

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: ConvertPage-BJ6By1ZH.js  ConvertPage-BYYfuK9p.js  ConvertPage-BcxjUK7t.js  ConvertPage-CCUThp8y.js  ConvertPage-DOdBSB78.js  ConvertPage-Dy1KJl1J.js  ConvertPage-MPU_ZBUu.js  ConvertPage-f-czy-BP.js  HomePage-5mlJYeZX.js  HomePage-BRutR9GH.js  HomePage-BzHdswkb.js  HomePage-C0PKXG7W.js  HomePage-C83bxsWl.js  HomePage-JBJOFRPO.js  HomePage-K-qLeV_J.js  HomePage-buwcCuAF.js  index-0UFaGJ62.js  index-BpscqmNU.js  index-BwNlDcAu.js  index-CtrMHX_j.js  index-D59ZONaB.js  index-DAjLKwz-.js  index-E1LSyQ9S.js  index-jfIO_61u.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CompressionSlider.tsx  DropZone.tsx  FileList.tsx  FormatSelector.tsx  ProgressBar.tsx  QualityPreview.tsx
src/hooks/: useConversion.ts  useTheme.ts
src/licensing/: LicenseProvider.tsx  config.ts
src/pages/: ConvertPage.tsx  HomePage.tsx
src/services/: conversionService.ts
src/utils/: imageUtils.ts
